# AI-Maths-Assistant

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
Notebook/: Build an AI Math Assistant.ipynb
